# BITMASK

./: .gitignore  BITMASK.sln  CMakeLists.txt
BITMASK/: BITMASK.vcxproj  BITMASK.vcxproj.filters  Game.cpp  Game.h  Main.cpp
BITMASK/Components/: Component.h  ComponentIndex.h  ComponentMessage.h  DrawableComponent.h  GraphicComponent.h  KeyboardInputComponent.cpp  PhysicsBodyComponent.cpp  PhysicsBodyComponent.h  ScriptedComponent.cpp  ScriptedComponent.h  ShapeComponent.cpp  ShapeComponent.h  TransformComponent.cpp  TransformComponent.h
BITMASK/DrawDebug/: BoxDebugrender.cpp  BoxDebugrender.h
BITMASK/GameObjects/: Component.h  GameObject.h  GameObjectManager.cpp  GameObjectManager.h
BITMASK/Managers/: GameObjectManager.cpp  GameObjectManager.h  SystemManager.cpp  SystemManager.h
BITMASK/Resources/: ResourceManager.h  ResourceManager.inl  ScriptManager.cpp  ScriptManager.h
BITMASK/Scripting/: ScriptDefs.cpp  ScriptDefs.h
BITMASK/Systems/: BallMovementSystem.cpp  BallMovementSystem.h  DebugDrawSystem.cpp  DebugDrawSystem.h  InputSystem.cpp  InputSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  ScriptSystem.cpp  ScriptSystem.h  System.h
cmake_modules/: FindLua53.cmake  FindPhysicsFS.cmake  FindSFML.cmake
